# SQR-UKF-MKL

./: .gitignore  CMakeLists.txt  README.md  STUDENT_T_SRUKF.md  deploy_python.bat
MKL/: kelly.h  mkl_config.h  mkl_config_14900k.h  student_t_srukf.def
python/: compare_ukf.py  demo_ukf_finance.ipynb  srukf.py  student_t_srukf.lib
test/: bench_srukf.c  test_kelly.c
